# actor

./: .editorconfig  .gitignore  CMakeLists.txt  main.cpp  variant.hpp
include/: event_handler.hpp  event_helper.hpp
include/actor/: actor.hpp
include/engine/: coordinator.hpp  executor.hpp  executor_actor.hpp
include/events/: event_handler.hpp  event_helper.hpp  event_publisher.hpp
include/tools/: latency.hpp  queue_lock.hpp  single_consumer.hpp  variant.hpp
sample/pingpong/: pingpong.cpp  pingpong_no_actor.cpp
test/: coherency_test.cpp
